<resources>
    <string name="app_name" translatable="false">5KCarCare</string>
    <string name="title_home">Home</string>
    <string name="title_booking">Booking</string>
    <string name="title_help">Help</string>
    <string name="title_profile">Profile</string>
    <string name="car_polishing">2. Car Polishing</string>
    <string name="car_polishing_text">Car polishing is a product that helps to eliminate surface scratches, swirls, oxidation, dirt.</string>
    <string name="skip">Skip</string>
    <string name="our_services">Our Services</string>
    <string name="done">Done</string>
    <string name="login_with_mobile_number">Login with mobile number</string>
    <string name="your_number_will_be_safe_with_us_txt">Your number will be safe with us, We won\'t  share your details with anyone</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="next">Next</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_6_digit_code_sent">Please enter 6 digit code sent to your registered mobile number %s</string>
    <string name="not_your_number"><u>Not Your Number</u></string>
    <string name="not_received_code">Not received code?</string>
    <string name="resend">Resend?</string>
    <string name="submit">Submit</string>
    <string name="tell_us_whose_this">Tell us whose this!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="update">Update</string>
    <string name="ok">Okay</string>
    <string name="location_error_message">Please enable location permissions to access location.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBNVTsBMK8lizlHPR3kPYMTB9CN9g4moJw</string>
    <string name="select_location">Select Location</string>
    <string name="car_location">Car Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="loading">Loading</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="most_trending_services">Most Trending Services</string>
    <string name="recommended_services">Recommended Services</string>
    <string name="recommended">Recommended</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="please_enter_valid_user_name">Please enter vaild user name</string>
    <string name="otp_send_to_your_registered_mobile">OTP sent to your registered mobile number</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="hatch_back">HATCHBACK</string>
    <string name="sedan">SEDAN</string>
    <string name="suv">SUV</string>
    <string name="model_name">Model Name</string>
    <string name="car_model">Car Model</string>
    <string name="registration">Registration</string>
    <string name="registration_hint" translatable="false">TN 00 XX 0000</string>
    <string name="save">Save</string>
    <string name="muv">Premium</string>
    <string name="please_enter_car_model">Please enter the car model</string>
    <string name="please_select_primary_vehicle">Please select the primary vehicle</string>
    <string name="please_enter_registration_number">Please enter the registration number</string>
    <string name="primary">Primary</string>
    <string name="add_new_car">+ Add New Car</string>
    <string name="car_wash">1. Car Wash</string>
    <string name="car_wash_description">Simple to premium car wash service that your car deserves.</string>
    <string name="car_accessories">3. Car Accessories</string>
    <string name="car_accessories_text">Sunflim, Floor mats, Perfumes, Car cleaning kit</string>
    <string name="car_maintance">4. Car Maintenance</string>
    <string name="car_maintance_text">Carbon cleaning, Dent removal, Thar removal, Painting Job</string>
    <string name="ear_700_for_every_friend_you_refer">Earn ₹150 for every friend you refer</string>
    <string name="get_a_friend_to_start_using_5k_car_care">Get a friend to start \nusing 5K Car Care</string>
    <string name="refer_now">Refer Now</string>
    <string name="use_referral_code_txt">I’m inviting you to use 5K Car Care App, \n Get premium car care service from nearest 5K outlet now. Get a voucher worth %s on registering to 5K app by using below link \n %s</string>
    <string name="inprogress">Inprogress</string>
    <string name="no_data_found">No Data Found</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="bookings">Bookings</string>
    <string name="vouchers">Vouchers</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="app_version">App Version : %s</string>
    <string name="about">About</string>
    <string name="service_included">Service Included</string>
    <string name="customer_review">Customer Review</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="mins_taken">%d Mins Taken</string>
    <string name="ro_treated_water">R.O Treated Water</string>
    <string name="free_pick_up_drop"><![CDATA[Free Pick-up & Drop]]></string>
    <string name="add_voice_instruction">Add Voice Instruction</string>
    <string name="check_out">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="location_for_pick_up">Location for Pickup</string>
    <string name="free_pick_up_drop_service">Free Pickup/Drop Service</string>
    <string name="select_your_preferred_date">Select your preferred Date</string>
    <string name="pick_time_slot">Pick Time Slot</string>
    <string name="near_by_outlets">Neatby Outlets</string>
    <string name="slot_available"> ( %d Slots Available)</string>
    <string name="payment_method">Payment Method</string>
    <string name="online">Online</string>
    <string name="cod">COD</string>
    <string name="referral_vouchers_applied">Referral Vouchers Applied!</string>
    <string name="issued_for_successful_referral">Issued for Successful Referral</string>
    <string name="price_details">Price Details</string>
    <string name="actual_price">Actual Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="voucher_applied">Voucher Applied</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_order">Place Order</string>
    <string name="no_vouchers_found">You have no vouchers. \nRefer a friend to earn exiting Gift Vouchers</string>
    <string name="pay_now">Book Now</string>
    <string name="please_select_payment_mode">Please select the payment mode</string>
    <string name="you_have_not_placed_any_order_yet">You have not placed any order yet</string>
    <string name="book_now">Book Now</string>
    <string name="k_networks">5K Networks</string>
    <string name="k_networks_address">54A, Bharathi colony Main Road,\nPeelamedu, Coimbatore - 641004, Tamil Nadu, India.</string>
    <string name="customer_care_number">+91 9159855555</string>
    <string name="title_contact">Contacts</string>
    <string name="offer">OFFER:</string>
    <string name="cancel">Cancel</string>
    <string name="job_status">Job Status</string>
    <string name="feed_back">Feedback</string>
    <string name="provide_your_valuable_feedback">Provide your valuable feedback to help us improve our quality</string>
    <string name="write_review">Write\nReview</string>
    <string name="get_your_e_receipt_here"><u>Get Your e-receipt here</u></string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="service_booked">"Service Booked "</string>
    <string name="in_service_outlet">In Service Outlet</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="driver_for_pickup">Driver for Pickup,</string>
    <string name="driver_for_drop">"Driver for Drop, "</string>
    <string name="booking_id">Booking ID: %s</string>
    <string name="provide_feed_back">Provide Feedback</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="please_enter_feedback">Please enter the feedback</string>
    <string name="are_you_sure_you_want_you_cancel_booking">Are you sure you want to cancel booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_txt">Continue</string>
    <string name="permium_membershp">Premium Membership</string>
    <string name="membership_percentage">9% OFF</string>
    <string name="your_booking_has_been_confirmed">Your booking has been confirmed</string>
    <string name="error_in_payment_gateway">%s\n\nNo worries, your order has been placed you can pay with Cash/Card while taking delivery</string>
    <string name="no_pick_time_slot">No Slots available for the day, Please try with different date or outlet</string>
    <string name="audio_instruction">audio_instruction.mp3</string>
    <string name="do_you_want_to_delete_audio_instructions">Do you want to delete audio instructions?</string>
    <string name="default_notification_channel_id">5K Car</string>
    <string name="invoice_downloaded_successfully">Invoice downloaded successfully %s</string>
    <string name="error_message_action_view">You may not have the right app to open this content.</string>
    <string name="please_select_terms_conditions">Please accept Terms &amp; Conditions, to books the services </string>
    <string name="are_you_sure_you_want_you_logout">Are you sure you want to logout?</string>
    <string name="accept_terms_conditons" > Accept <b><u><font color='#1D2588'>Terms &amp; Conditions</font></u></b></string>
    <string name="elite">Elite</string>
    <string name="edit_review">Edit Review</string>
    <string name="free_pick_up_drop_diabled">Pickup/Drop has been disabled</string>
    <string name="pick_up_drop_service_is_available_for_outlets">Pickup/Drop service is available for outlets less than 10KM</string>
    <string name="fetching_address">Fetching Address...</string>
    <string name="no_near_by_outlet">No near by outlets found. Try changing the pickup location.</string>
</resources>