<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_login_background_icon"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/login_with_mobile_number"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/your_number_will_be_safe_with_us_txt"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/draw_rounded_white_view"
                android:padding="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumberEdt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_medium"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:hint="@string/enter_your_mobile_number"
                    android:background="@drawable/draw_rounded_gray_view"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_selector"
                    android:enabled="true"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/splash_background"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/termAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/opensans_medium"
                        android:text="@string/terms_and_conditions"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/text_gray"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/opensans_medium"
                        android:text=" &amp; "
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/privacyAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:layout_weight="1.2"
                        android:fontFamily="@font/opensans_medium"
                        android:text="@string/privacy_policy"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/enter_otp"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/otpConfirmTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/please_enter_6_digit_code_sent"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/notYourNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/not_your_number"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/draw_rounded_white_view"
                android:padding="15dp"
                android:orientation="vertical">

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otpView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/primary_text_color"
                    app:bar_active_color="@color/transparent"
                    app:bar_enabled="true"
                    app:bar_height="2dp"
                    app:bar_inactive_color="@color/transparent"
                    app:box_margin_left="5dp"
                    app:box_margin_right="5dp"
                    app:height="45dp"
                    app:length="6"
                    app:otp_box_background="@drawable/bg_otp_item"
                    app:otp_text_size="24dp"
                    app:width="45dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_selector"
                    android:enabled="true"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/splash_background"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/opensans_medium"
                        android:text="@string/not_received_code"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/resendAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/opensans_medium"
                        android:text="@string/resend"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>